Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: jyebra
    labels:
      tipo: desarrollo
