Serviceapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: serviceapp
  labels:
    app: appl
    tier: app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: "TCP"
  selector:
    app: appl
    tier: app
