Servicedb.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicedb
  labels:
    app: database
    tier: db
spec:
  ports:
  - port: 3306
    targetPort: 3306
    protocol: "TCP"
  selector:
    app: database
    tier: db
