Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: in-crud
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.jyebra.com
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apache-servicio
            port:
              number: 80
